--- a/base.css
+++ b/base.css
@@ -95,3 +95,11 @@ select {
     margin: 10px 0 20px;
     padding: 5px;
 }
+
+#label-lang {
+    display: none;
+}
+
+#lang {
+    display: none;
+}
